
set(CTLIBMODELS_SOURCES
    ct_itemdrawable/abstract/ct_abstractareashape2d.cpp
    ct_itemdrawable/abstract/ct_abstractattributes.cpp
    ct_itemdrawable/abstract/ct_abstractedgeattributes.cpp
    ct_itemdrawable/abstract/ct_abstractedgeattributesscalar.cpp
    ct_itemdrawable/abstract/ct_abstractfaceattributes.cpp
    ct_itemdrawable/abstract/ct_abstractfaceattributesscalar.cpp
    ct_itemdrawable/abstract/ct_abstractgrid3d.cpp
    ct_itemdrawable/abstract/ct_abstractgrid4d.cpp
    ct_itemdrawable/abstract/ct_abstractimage2d.cpp
    ct_itemdrawable/abstract/ct_abstractitemdrawablewithoutpointcloud.cpp
    ct_itemdrawable/abstract/ct_abstractitemdrawablewithpointcloud.cpp
    ct_itemdrawable/abstract/ct_abstractmeshmodel.cpp
    ct_itemdrawable/abstract/ct_abstractpointattributesscalar.cpp
    ct_itemdrawable/abstract/ct_abstractpointsattributes.cpp
    ct_itemdrawable/abstract/ct_abstractpointsattributescontainer.cpp
    ct_itemdrawable/abstract/ct_abstractprofile.cpp
    ct_itemdrawable/abstract/ct_abstractshape.cpp
    ct_itemdrawable/abstract/ct_abstractshape2d.cpp
    ct_itemdrawable/ct_affiliationid.cpp
    ct_itemdrawable/ct_beam.cpp
    ct_itemdrawable/ct_box2d.cpp
    ct_itemdrawable/ct_circle.cpp
    ct_itemdrawable/ct_circle2d.cpp
    ct_itemdrawable/ct_colorcomposite.cpp
    ct_itemdrawable/ct_cylinder.cpp
    ct_itemdrawable/ct_edgeattributescolor.cpp
    ct_itemdrawable/ct_edgeattributesnormal.cpp
    ct_itemdrawable/ct_edgeattributesscalart.cpp
    ct_itemdrawable/ct_ellipse.cpp
    ct_itemdrawable/ct_faceattributescolor.cpp
    ct_itemdrawable/ct_faceattributesnormal.cpp
    ct_itemdrawable/ct_faceattributesscalart.cpp
    ct_itemdrawable/ct_grid3d.cpp
    ct_itemdrawable/ct_grid3d_points.cpp
    ct_itemdrawable/ct_grid3d_sparse.cpp
    ct_itemdrawable/ct_grid4d.cpp
    ct_itemdrawable/ct_grid4d_dense.cpp
    ct_itemdrawable/ct_grid4d_sparse.cpp
    ct_itemdrawable/ct_image2d.cpp
    ct_itemdrawable/ct_image2d_points.cpp
    ct_itemdrawable/ct_itemattributelist.cpp
    ct_itemdrawable/ct_line.cpp
    ct_itemdrawable/ct_line2d.cpp
    ct_itemdrawable/ct_loopcounter.cpp
    ct_itemdrawable/ct_meshmodel.cpp
    ct_itemdrawable/ct_opfmeshmodel.cpp
    ct_itemdrawable/ct_planarbspline.cpp
    ct_itemdrawable/ct_plotgridmanager.cpp
    ct_itemdrawable/ct_plotlistingrid.cpp
    ct_itemdrawable/ct_point2d.cpp
    ct_itemdrawable/ct_pointcluster.cpp
    ct_itemdrawable/ct_pointsattributescolor.cpp
    ct_itemdrawable/ct_pointsattributesnormal.cpp
    ct_itemdrawable/ct_pointsattributesscalarmaskt.cpp
    ct_itemdrawable/ct_pointsattributesscalartemplated.cpp
    ct_itemdrawable/ct_polygon2d.cpp
    ct_itemdrawable/ct_polyline2d.cpp
    ct_itemdrawable/ct_profile.cpp
    ct_itemdrawable/ct_referencepoint.cpp
    ct_itemdrawable/ct_scanner.cpp
    ct_itemdrawable/ct_scanpath.cpp
    ct_itemdrawable/ct_scene.cpp
    ct_itemdrawable/ct_shootingpatternd.cpp
    ct_itemdrawable/ct_sphere.cpp
    ct_itemdrawable/ct_stdpointsattributescontainer.cpp
    ct_itemdrawable/ct_tnodegroup.cpp
    ct_itemdrawable/ct_topfnodegroup.cpp
    ct_itemdrawable/ct_transformationmatrix.cpp
    ct_itemdrawable/ct_triangulation2d.cpp
    ct_itemdrawable/ct_ttreegroup.cpp
    ct_itemdrawable/tools/ct_counter.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardabstractitemdrawablewithoutpointclouddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardabstractitemdrawablewithpointclouddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardabstractshape2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardabstractshapedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardbeamdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardbox2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardcircle2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardcircledrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardcolorcompositedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardcylinderdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardellipsedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardgrid3d_pointdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardgrid3d_sparsedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardgrid3ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardgrid4ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardimage2d_pointdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardimage2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardline2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardlinedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardmeshmodeldrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardplanarbsplinedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardpoint2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardpointclusterdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardpolygon2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardpolyline2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardprofiledrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardreferencepointdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardscannerdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardscanpathdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardspheredrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardtriangulation2ddrawmanager.cpp
    ct_itemdrawable/tools/gridtools/ct_abstractgrid3dbeamvisitor.cpp
    ct_itemdrawable/tools/gridtools/ct_grid3dbeamvisitor_indexlist.cpp
    ct_itemdrawable/tools/gridtools/ct_grid3dwootraversalalgorithm.cpp
    ct_itemdrawable/tools/image2dtools/ct_image2dnaturalneighboursinterpolator.cpp
    ct_itemdrawable/tools/pointclustertools/ct_polylinesalgorithms.cpp
    ct_itemdrawable/tools/scanner/ct_parallelshootingpatternfrompointcloud.cpp
    ct_itemdrawable/tools/scanner/ct_shootingpatternfrompointcloud.cpp
    ct_itemdrawable/tools/scanner/ct_shot.cpp
    ct_itemdrawable/tools/scanner/ct_thetaphishootingpattern.cpp
    ct_math/ct_houghtransform.cpp
    ct_math/ct_sphericalline3d.cpp
    ct_math/delaunay2d/ct_delaunayoutline.cpp
    ct_math/delaunay2d/ct_delaunaysidelist.cpp
    ct_math/delaunay2d/ct_delaunaytriangle.cpp
    ct_math/delaunay2d/ct_delaunaytrianglesrecycler.cpp
    ct_math/delaunay2d/ct_delaunaytriangulation.cpp
    ct_math/delaunay2d/ct_delaunayvertex.cpp
    ct_math/delaunay2d/ct_delaunayvorovertex.cpp
    ct_shape2ddata/ct_areashape2ddata.cpp
    ct_shape2ddata/ct_box2ddata.cpp
    ct_shape2ddata/ct_circle2ddata.cpp
    ct_shape2ddata/ct_line2ddata.cpp
    ct_shape2ddata/ct_point2ddata.cpp
    ct_shape2ddata/ct_polygon2ddata.cpp
    ct_shape2ddata/ct_polyline2ddata.cpp
    ct_shape2ddata/ct_shape2ddata.cpp
    ct_shapedata/ct_boxdata.cpp
    ct_shapedata/ct_circledata.cpp
    ct_shapedata/ct_cylinderdata.cpp
    ct_shapedata/ct_ellipsedata.cpp
    ct_shapedata/ct_linedata.cpp
    ct_shapedata/ct_planarbsplinedata.cpp
    ct_shapedata/ct_shapedata.cpp
    ct_shapedata/ct_spheredata.cpp
    ct_tools/attributes/ct_abstractattributestocloudworker.cpp
)

set(CTLIBSTRUCTUREADDON_TRANSLATIONS
    languages/ctlibstructureaddon_fr.ts
    languages/ctlibstructureaddon_en.ts
)

add_library(ctlibstructureaddon SHARED
    ${CTLIBSTRUCTUREADDON_SOURCES}
    ${CTLIBSTRUCTUREADDON_TRANSLATIONS}
)

target_include_directories(ctlibstructureaddon PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/
)

target_compile_definitions(ctlibstructureaddon PRIVATE CTLIBSTRUCTUREADDON_LIBRARY)
target_link_libraries(ctlibstructureaddon
	ctlibcommon
	ctlibstructure
	ctlibmodels
	ctlibclouds
	ctlibmath
	Qt5::Core
	Qt5::Widgets
)
