project(ctlibstructureaddon)

set(CTLIBSTRUCTUREADDON_HEADERS
    ct_handle/ct_handleinedgecolor.h
    ct_handle/ct_handleinedgenormal.h
    ct_handle/ct_handleinedgescalar.h
    ct_handle/ct_handleinfacecolor.h
    ct_handle/ct_handleinfacenormal.h
    ct_handle/ct_handleinfacescalar.h
    ct_handle/ct_handleinpointcolor.h
    ct_handle/ct_handleinpointnormal.h
    ct_handle/ct_handleinpointscalar.h
    ct_handle/ct_handleinpointscalarmask.h
    ct_handle/ct_handleoutedgecolor.h
    ct_handle/ct_handleoutedgenormal.h
    ct_handle/ct_handleoutedgescalar.h
    ct_handle/ct_handleoutfacecolor.h
    ct_handle/ct_handleoutfacenormal.h
    ct_handle/ct_handleoutfacescalar.h
    ct_handle/ct_handleoutpointcolor.h
    ct_handle/ct_handleoutpointnormal.h
    ct_handle/ct_handleoutpointscalar.h
    ct_handle/ct_handleoutpointscalarmask.h
    ct_itemdrawable/abstract/ct_abstractareashape2d.h
    ct_itemdrawable/abstract/ct_abstractattributes.h
    ct_itemdrawable/abstract/ct_abstractedgeattributes.h
    ct_itemdrawable/abstract/ct_abstractedgeattributesscalar.h
    ct_itemdrawable/abstract/ct_abstractfaceattributes.h
    ct_itemdrawable/abstract/ct_abstractfaceattributesscalar.h
    ct_itemdrawable/abstract/ct_abstractgrid3d.h
    ct_itemdrawable/abstract/ct_abstractgrid4d.h
    ct_itemdrawable/abstract/ct_abstractimage2d.h
    ct_itemdrawable/abstract/ct_abstractitemdrawablewithoutpointcloud.h
    ct_itemdrawable/abstract/ct_abstractitemdrawablewithpointcloud.h
    ct_itemdrawable/abstract/ct_abstractmeshmodel.h
    ct_itemdrawable/abstract/ct_abstractpointattributesscalar.h
    ct_itemdrawable/abstract/ct_abstractpointsattributes.h
    ct_itemdrawable/abstract/ct_abstractpointsattributescontainer.h
    ct_itemdrawable/abstract/ct_abstractprofile.h
    ct_itemdrawable/abstract/ct_abstractshape.h
    ct_itemdrawable/abstract/ct_abstractshape2d.h
    ct_itemdrawable/ct_affiliationid.h
    ct_itemdrawable/ct_beam.h
    ct_itemdrawable/ct_box2d.h
    ct_itemdrawable/ct_circle.h
    ct_itemdrawable/ct_circle2d.h
    ct_itemdrawable/ct_colorcomposite.h
    ct_itemdrawable/ct_cylinder.h
    ct_itemdrawable/ct_edgeattributescolor.h
    ct_itemdrawable/ct_edgeattributesnormal.h
    ct_itemdrawable/ct_edgeattributesscalart.h
    ct_itemdrawable/ct_ellipse.h
    ct_itemdrawable/ct_faceattributescolor.h
    ct_itemdrawable/ct_faceattributesnormal.h
    ct_itemdrawable/ct_faceattributesscalart.h
    ct_itemdrawable/ct_grid3d.h
    ct_itemdrawable/ct_grid3d.hpp
    ct_itemdrawable/ct_grid3d_points.h
    ct_itemdrawable/ct_grid3d_sparse.h
    ct_itemdrawable/ct_grid3d_sparse.hpp
    ct_itemdrawable/ct_grid4d.h
    ct_itemdrawable/ct_grid4d.hpp
    ct_itemdrawable/ct_grid4d_dense.h
    ct_itemdrawable/ct_grid4d_dense.hpp
    ct_itemdrawable/ct_grid4d_sparse.h
    ct_itemdrawable/ct_grid4d_sparse.hpp
    ct_itemdrawable/ct_image2d.h
    ct_itemdrawable/ct_image2d.hpp
    ct_itemdrawable/ct_image2d_points.h
    ct_itemdrawable/ct_itemattributelist.h
    ct_itemdrawable/ct_line.h
    ct_itemdrawable/ct_line2d.h
    ct_itemdrawable/ct_loopcounter.h
    ct_itemdrawable/ct_meshmodel.h
    ct_itemdrawable/ct_opfmeshmodel.h
    ct_itemdrawable/ct_planarbspline.h
    ct_itemdrawable/ct_plotgridmanager.h
    ct_itemdrawable/ct_plotlistingrid.h
    ct_itemdrawable/ct_point2d.h
    ct_itemdrawable/ct_pointcluster.h
    ct_itemdrawable/ct_pointsattributescolor.h
    ct_itemdrawable/ct_pointsattributesnormal.h
    ct_itemdrawable/ct_pointsattributesscalarmaskt.h
    ct_itemdrawable/ct_pointsattributesscalarmaskt.hpp
    ct_itemdrawable/ct_pointsattributesscalartemplated.h
    ct_itemdrawable/ct_pointsattributesscalartemplated.hpp
    ct_itemdrawable/ct_polygon2d.h
    ct_itemdrawable/ct_polyline2d.h
    ct_itemdrawable/ct_profile.h
    ct_itemdrawable/ct_profile.hpp
    ct_itemdrawable/ct_referencepoint.h
    ct_itemdrawable/ct_scanner.h
    ct_itemdrawable/ct_scanpath.h
    ct_itemdrawable/ct_scene.h
    ct_itemdrawable/ct_shootingpatternd.h
    ct_itemdrawable/ct_sphere.h
    ct_itemdrawable/ct_stdpointsattributescontainer.h
    ct_itemdrawable/ct_tnodegroup.h
    ct_itemdrawable/ct_topfnodegroup.h
    ct_itemdrawable/ct_transformationmatrix.h
    ct_itemdrawable/ct_triangulation2d.h
    ct_itemdrawable/ct_ttreegroup.h
    ct_itemdrawable/tools/ct_counter.h
    ct_itemdrawable/tools/drawmanager/ct_standardabstractitemdrawablewithoutpointclouddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardabstractitemdrawablewithpointclouddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardabstractshape2ddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardabstractshapedrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardbeamdrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardbox2ddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardcircle2ddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardcircledrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardcolorcompositedrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardcylinderdrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardellipsedrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardgrid3d_pointdrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardgrid3d_sparsedrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardgrid3d_sparsedrawmanager.hpp
    ct_itemdrawable/tools/drawmanager/ct_standardgrid3ddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardgrid3ddrawmanager.hpp
    ct_itemdrawable/tools/drawmanager/ct_standardgrid4ddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardgrid4ddrawmanager.hpp
    ct_itemdrawable/tools/drawmanager/ct_standardimage2d_pointdrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardimage2ddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardimage2ddrawmanager.hpp
    ct_itemdrawable/tools/drawmanager/ct_standardline2ddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardlinedrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardmeshmodeldrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardplanarbsplinedrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardpoint2ddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardpointclusterdrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardpolygon2ddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardpolyline2ddrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardprofiledrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardprofiledrawmanager.hpp
    ct_itemdrawable/tools/drawmanager/ct_standardreferencepointdrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardscannerdrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardscanpathdrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardspheredrawmanager.h
    ct_itemdrawable/tools/drawmanager/ct_standardtriangulation2ddrawmanager.h
    ct_itemdrawable/tools/gridtools/ct_abstractgrid3dbeamvisitor.h
    ct_itemdrawable/tools/gridtools/ct_grid3dbeamvisitor_indexlist.h
    ct_itemdrawable/tools/gridtools/ct_grid3dwootraversalalgorithm.h
    ct_itemdrawable/tools/image2dtools/ct_image2dnaturalneighboursinterpolator.h
    ct_itemdrawable/tools/pointclustertools/ct_polylinesalgorithms.h
    ct_itemdrawable/tools/scanner/ct_parallelshootingpatternfrompointcloud.h
    ct_itemdrawable/tools/scanner/ct_shootingpattern.h
    ct_itemdrawable/tools/scanner/ct_shootingpatternfrompointcloud.h
    ct_itemdrawable/tools/scanner/ct_shot.h
    ct_itemdrawable/tools/scanner/ct_thetaphishootingpattern.h
    ct_math/ct_houghtransform.h
    ct_math/ct_sphericalline3d.h
    ct_math/delaunay2d/ct_delaunayoutline.h
    ct_math/delaunay2d/ct_delaunaysidelist.h
    ct_math/delaunay2d/ct_delaunaytriangle.h
    ct_math/delaunay2d/ct_delaunaytrianglesrecycler.h
    ct_math/delaunay2d/ct_delaunaytriangulation.h
    ct_math/delaunay2d/ct_delaunayvertex.h
    ct_math/delaunay2d/ct_delaunayvorovertex.h
    ct_shape2ddata/ct_areashape2ddata.h
    ct_shape2ddata/ct_box2ddata.h
    ct_shape2ddata/ct_circle2ddata.h
    ct_shape2ddata/ct_line2ddata.h
    ct_shape2ddata/ct_point2ddata.h
    ct_shape2ddata/ct_polygon2ddata.h
    ct_shape2ddata/ct_polyline2ddata.h
    ct_shape2ddata/ct_shape2ddata.h
    ct_shapedata/ct_boxdata.h
    ct_shapedata/ct_circledata.h
    ct_shapedata/ct_cylinderdata.h
    ct_shapedata/ct_ellipsedata.h
    ct_shapedata/ct_linedata.h
    ct_shapedata/ct_planarbsplinedata.h
    ct_shapedata/ct_shapedata.h
    ct_shapedata/ct_spheredata.h
    ct_tools/attributes/ct_abstractattributestocloudworker.h
    ct_tools/attributes/ct_attributestocloudworkert.h
    ct_tools/attributes/ct_attributestocloudworkert.hpp
    ctlibstructureaddon_global.h
)

set(CTLIBSTRUCTUREADDON_SOURCES
    ct_itemdrawable/abstract/ct_abstractareashape2d.cpp
    ct_itemdrawable/abstract/ct_abstractattributes.cpp
    ct_itemdrawable/abstract/ct_abstractedgeattributes.cpp
    ct_itemdrawable/abstract/ct_abstractedgeattributesscalar.cpp
    ct_itemdrawable/abstract/ct_abstractfaceattributes.cpp
    ct_itemdrawable/abstract/ct_abstractfaceattributesscalar.cpp
    ct_itemdrawable/abstract/ct_abstractgrid3d.cpp
    ct_itemdrawable/abstract/ct_abstractgrid4d.cpp
    ct_itemdrawable/abstract/ct_abstractimage2d.cpp
    ct_itemdrawable/abstract/ct_abstractitemdrawablewithoutpointcloud.cpp
    ct_itemdrawable/abstract/ct_abstractitemdrawablewithpointcloud.cpp
    ct_itemdrawable/abstract/ct_abstractmeshmodel.cpp
    ct_itemdrawable/abstract/ct_abstractpointattributesscalar.cpp
    ct_itemdrawable/abstract/ct_abstractpointsattributes.cpp
    ct_itemdrawable/abstract/ct_abstractpointsattributescontainer.cpp
    ct_itemdrawable/abstract/ct_abstractprofile.cpp
    ct_itemdrawable/abstract/ct_abstractshape.cpp
    ct_itemdrawable/abstract/ct_abstractshape2d.cpp
    ct_itemdrawable/ct_affiliationid.cpp
    ct_itemdrawable/ct_beam.cpp
    ct_itemdrawable/ct_box2d.cpp
    ct_itemdrawable/ct_circle.cpp
    ct_itemdrawable/ct_circle2d.cpp
    ct_itemdrawable/ct_colorcomposite.cpp
    ct_itemdrawable/ct_cylinder.cpp
    ct_itemdrawable/ct_edgeattributescolor.cpp
    ct_itemdrawable/ct_edgeattributesnormal.cpp
    ct_itemdrawable/ct_edgeattributesscalart.cpp
    ct_itemdrawable/ct_ellipse.cpp
    ct_itemdrawable/ct_faceattributescolor.cpp
    ct_itemdrawable/ct_faceattributesnormal.cpp
    ct_itemdrawable/ct_faceattributesscalart.cpp
    ct_itemdrawable/ct_grid3d.cpp
    ct_itemdrawable/ct_grid3d_points.cpp
    ct_itemdrawable/ct_grid3d_sparse.cpp
    ct_itemdrawable/ct_grid4d.cpp
    ct_itemdrawable/ct_grid4d_dense.cpp
    ct_itemdrawable/ct_grid4d_sparse.cpp
    ct_itemdrawable/ct_image2d.cpp
    ct_itemdrawable/ct_image2d_points.cpp
    ct_itemdrawable/ct_itemattributelist.cpp
    ct_itemdrawable/ct_line.cpp
    ct_itemdrawable/ct_line2d.cpp
    ct_itemdrawable/ct_loopcounter.cpp
    ct_itemdrawable/ct_meshmodel.cpp
    ct_itemdrawable/ct_opfmeshmodel.cpp
    ct_itemdrawable/ct_planarbspline.cpp
    ct_itemdrawable/ct_plotgridmanager.cpp
    ct_itemdrawable/ct_plotlistingrid.cpp
    ct_itemdrawable/ct_point2d.cpp
    ct_itemdrawable/ct_pointcluster.cpp
    ct_itemdrawable/ct_pointsattributescolor.cpp
    ct_itemdrawable/ct_pointsattributesnormal.cpp
    ct_itemdrawable/ct_pointsattributesscalarmaskt.cpp
    ct_itemdrawable/ct_pointsattributesscalartemplated.cpp
    ct_itemdrawable/ct_polygon2d.cpp
    ct_itemdrawable/ct_polyline2d.cpp
    ct_itemdrawable/ct_profile.cpp
    ct_itemdrawable/ct_referencepoint.cpp
    ct_itemdrawable/ct_scanner.cpp
    ct_itemdrawable/ct_scanpath.cpp
    ct_itemdrawable/ct_scene.cpp
    ct_itemdrawable/ct_shootingpatternd.cpp
    ct_itemdrawable/ct_sphere.cpp
    ct_itemdrawable/ct_stdpointsattributescontainer.cpp
    ct_itemdrawable/ct_tnodegroup.cpp
    ct_itemdrawable/ct_topfnodegroup.cpp
    ct_itemdrawable/ct_transformationmatrix.cpp
    ct_itemdrawable/ct_triangulation2d.cpp
    ct_itemdrawable/ct_ttreegroup.cpp
    ct_itemdrawable/tools/ct_counter.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardabstractitemdrawablewithoutpointclouddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardabstractitemdrawablewithpointclouddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardabstractshape2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardabstractshapedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardbeamdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardbox2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardcircle2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardcircledrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardcolorcompositedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardcylinderdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardellipsedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardgrid3d_pointdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardgrid3d_sparsedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardgrid3ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardgrid4ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardimage2d_pointdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardimage2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardline2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardlinedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardmeshmodeldrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardplanarbsplinedrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardpoint2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardpointclusterdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardpolygon2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardpolyline2ddrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardprofiledrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardreferencepointdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardscannerdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardscanpathdrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardspheredrawmanager.cpp
    ct_itemdrawable/tools/drawmanager/ct_standardtriangulation2ddrawmanager.cpp
    ct_itemdrawable/tools/gridtools/ct_abstractgrid3dbeamvisitor.cpp
    ct_itemdrawable/tools/gridtools/ct_grid3dbeamvisitor_indexlist.cpp
    ct_itemdrawable/tools/gridtools/ct_grid3dwootraversalalgorithm.cpp
    ct_itemdrawable/tools/image2dtools/ct_image2dnaturalneighboursinterpolator.cpp
    ct_itemdrawable/tools/pointclustertools/ct_polylinesalgorithms.cpp
    ct_itemdrawable/tools/scanner/ct_parallelshootingpatternfrompointcloud.cpp
    ct_itemdrawable/tools/scanner/ct_shootingpatternfrompointcloud.cpp
    ct_itemdrawable/tools/scanner/ct_shot.cpp
    ct_itemdrawable/tools/scanner/ct_thetaphishootingpattern.cpp
    ct_math/ct_houghtransform.cpp
    ct_math/ct_sphericalline3d.cpp
    ct_math/delaunay2d/ct_delaunayoutline.cpp
    ct_math/delaunay2d/ct_delaunaysidelist.cpp
    ct_math/delaunay2d/ct_delaunaytriangle.cpp
    ct_math/delaunay2d/ct_delaunaytrianglesrecycler.cpp
    ct_math/delaunay2d/ct_delaunaytriangulation.cpp
    ct_math/delaunay2d/ct_delaunayvertex.cpp
    ct_math/delaunay2d/ct_delaunayvorovertex.cpp
    ct_shape2ddata/ct_areashape2ddata.cpp
    ct_shape2ddata/ct_box2ddata.cpp
    ct_shape2ddata/ct_circle2ddata.cpp
    ct_shape2ddata/ct_line2ddata.cpp
    ct_shape2ddata/ct_point2ddata.cpp
    ct_shape2ddata/ct_polygon2ddata.cpp
    ct_shape2ddata/ct_polyline2ddata.cpp
    ct_shape2ddata/ct_shape2ddata.cpp
    ct_shapedata/ct_boxdata.cpp
    ct_shapedata/ct_circledata.cpp
    ct_shapedata/ct_cylinderdata.cpp
    ct_shapedata/ct_ellipsedata.cpp
    ct_shapedata/ct_linedata.cpp
    ct_shapedata/ct_planarbsplinedata.cpp
    ct_shapedata/ct_shapedata.cpp
    ct_shapedata/ct_spheredata.cpp
    ct_tools/attributes/ct_abstractattributestocloudworker.cpp
)

set(CTLIBSTRUCTUREADDON_TRANSLATIONS
    languages/ctlibstructureaddon_fr.ts
    languages/ctlibstructureaddon_en.ts
)

add_library(ctlibstructureaddon SHARED
    ${CTLIBSTRUCTUREADDON_HEADERS}
    ${CTLIBSTRUCTUREADDON_SOURCES}
    ${CTLIBSTRUCTUREADDON_TRANSLATIONS}
)

target_include_directories(ctlibstructureaddon PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/
)

target_compile_definitions(ctlibstructureaddon PRIVATE CTLIBSTRUCTUREADDON_LIBRARY)
target_link_libraries(ctlibstructureaddon
	ctlibcommon
	ctlibstructure
	ctlibmodels
	ctlibclouds
	ctlibmath
	ctliblog
	opencv_core
	Qt5::Core
	Qt5::Widgets
)
